@@ -1,10 +1,0 @@
-Vim is an almost compatible version of the UNIX editor Vi.  Many new features
-have been added: multi level undo, syntax highlighting, command line history,
-on-line help, filename completion, block operations, etc.
-
-If you are building the package from source you may want to enable some
-features such as a perl or python interpreter which are not enabled by
-default.
-
-This version also contains a X11 GTK+ GUI. If you don't have X11,
-look at the `vim' package instead.
