@@ -1,12 +1,0 @@
-@comment $NetBSD: PLIST,v 1.2 2006/03/02 10:41:41 martti Exp $
-bin/gview
-bin/gvim
-bin/rgview
-bin/rgvim
-bin/rview
-bin/rvim
-bin/vim
-man/man1/gview.1
-man/man1/gvim.1
-man/man1/rgview.1
-man/man1/rgvim.1
